<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="22dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/categoryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintCreateCollection"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:minHeight="50dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/repeatTextView"
        android:autofillHints="Java Script" />

    <TextView
        android:id="@+id/repeatTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/hintCountRepeat"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/button"
        android:fontFamily="@font/robotoregular"
        app:layout_constraintTop_toBottomOf="@id/categoryEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/repeatSeekBar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintThree"
        android:textSize="@dimen/textView"
        android:fontFamily="@font/robotoregular"
        android:alpha="0.7"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/repeatSeekBar"
        app:layout_constraintStart_toStartOf="@id/repeatSeekBar"
        app:layout_constraintEnd_toEndOf="@id/repeatSeekBar"
        app:layout_constraintHorizontal_bias="0.06"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintFour"
        android:textSize="@dimen/textView"
        android:fontFamily="@font/robotoregular"
        android:alpha="0.7"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/repeatSeekBar"
        app:layout_constraintStart_toStartOf="@id/repeatSeekBar"
        app:layout_constraintEnd_toEndOf="@id/repeatSeekBar"
        app:layout_constraintHorizontal_bias="0.28"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintFive"
        android:textSize="@dimen/textView"
        android:fontFamily="@font/robotoregular"
        android:alpha="0.7"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/repeatSeekBar"
        app:layout_constraintStart_toStartOf="@id/repeatSeekBar"
        app:layout_constraintEnd_toEndOf="@id/repeatSeekBar"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintSix"
        android:textSize="@dimen/textView"
        android:fontFamily="@font/robotoregular"
        android:alpha="0.7"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/repeatSeekBar"
        app:layout_constraintStart_toStartOf="@id/repeatSeekBar"
        app:layout_constraintEnd_toEndOf="@id/repeatSeekBar"
        app:layout_constraintHorizontal_bias="0.717"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintSeven"
        android:textSize="@dimen/textView"
        android:fontFamily="@font/robotoregular"
        android:alpha="0.7"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/repeatSeekBar"
        app:layout_constraintStart_toStartOf="@id/repeatSeekBar"
        app:layout_constraintEnd_toEndOf="@id/repeatSeekBar"
        app:layout_constraintHorizontal_bias="0.94"/>

    <SeekBar
        android:id="@+id/repeatSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="24dp"
        android:max="7"
        android:min="3"
        android:progress="5"
        android:theme="@style/SeekBarColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/repeatTextView"
        app:layout_constraintTop_toBottomOf="@id/categoryEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>